[심성헌] 3단계 - 로또(2등) (#2444)
* fix: 프로그래밍 요구사항 README.md 추가

* fix: step 2 피드백 반영

- Prize 클래스에서 맞춘 개수 비교할 때 마다 Number 클래스 생성하여 비교하는 코드 제거
- Rank Enum 클래스 추가, Rank 클래스를 통해 맞춘 개수 비교할 수 있도록 수정
- Number 클래스의 value 속성 long 타입에서 BigDecimal 클래스로 변경
- Number 클래스에 divide(), getLongValue(), getDoubleValue() 메소드 추가

* fix: 로또 미션 초기화 및 Number 클래스 구조 수정

1. 로또 미션 전체 초기화
2. Number 클래스 구조 수정 및 테스트 추가

* feat: Lotto, Prize, Rank 클래스 구현

1. Lotto 클래스 구현 및 테스트
2. Prize 클래스 구현 및 테스트 (보너스 점수 제외)
3. Rank 클래스 구현 및 테스트

* feat: 기존 코드 초기화, Lotto Application 재구현

* fix: README.md 요구사항 체크

* fix: Number 클래스 연산 및 비교 메소드 책임 이전

1. Number 클래스에서 수행하던 사칙연산과 비교 메소드를 Calculator 클래스로 이전

* fix: Prize 클래스 구조 수정

1. Prize 클래스의 ranks 속성의 타입을 List<Rank> 로 변경
2. Rank 클래스에 해당 등수에 당첨자 수와 총 상금합을 구하는 메소드 추가
3. PrizeTest 클래스 내부 구조 수정

* fix: Stream, IntStream 성능 비교

1. Stream, IntStream 성능을 비교하고, Game 클래스의 Lotto 출력하는 로직 수정

* fix: GameController 클래스 중복 코드 리팩토링

1. Game 클래스 생성 메소드 및 지난 주 로또 번호 입력 메소드 중복 코드 리팩토링

* fix: Number 클래스 incrementAndGet() 삭제